--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,6 +3,7 @@
 <nav class="menu">
   <ul>
     <li><a href="/">Home</a></li>
+    <li><a href="/portfolio">Portfolio</a></li>
     <li><a href="/about">About</a></li>
   </ul>
 </nav>
